LIST OF CHANGES FOR NPG-QC PACKAGE

 - GitHub CI - updated deprecated v2 runner action to v3
 - docs
  - automated creation/update of confluence pages for docs
 - Following a release on 07/09/2024, see https://metacpan.org/dist/App-perlbrew/changes
   the checksum of the script served by https://install.perlbrew.pl had changed.
   https://install.perlbrew.pl is a redirect to raw
   https://github.com/gugod/App-perlbrew/blob/master/perlbrew-install, so
   the change originates from GitHub and can be trusted. Our CI flow compares
   the checksum of the downloaded script to the expected value. We now store
   an updated expected checksum value, which corresponds to the latest release.
 - npg_qc::autoqc::check::review:
  The forthcoming lane-level evaluations are impossible if the code continues
  to error when library_type attribute is not defined for the entity under
  consideration. The library_type attribute is now set when possible, no error
  if it is undefined.

release 72.2.0 (2024-08-30)
 - npg_qc::autoqc::check::review:
   1. To enable access to information about a sequencing run (from RunInfo.xml,
      {r,R}unParameters.xml), added an optional 'runfolder_path' attribute.
      The attribute will have to be set by the caller.
   2. Added a new applicability criteria type - 'sequencing_run'
   3. To avoid running the review check unnecessarily in the pipeline context,
      moved ROBO criteria validation to the can_run method.
   4. Introduced an option of defining the ROBO section within the default
      section of the product configuration file.
 - Explained QC outcome change for complex products (merged)

release 72.1.2 (2024-08-05)
 - handle cases where the same tag sequence is seen in both index reads

release 72.1.1 (2024-05-24)
 - Removing Tidyp dependency from CI

release 72.1.0
 - Fixed the bug that was introduced while updating the SeqQC summary display
   for pulldown_metrics incomplete results. The bug manifestation is a display